# snakemake-executor-plugin-tibanna

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_executor_plugin_tibanna/: __init__.py
tests/: tests.py
